playgrounds/Buttons/src/styles/global.css
* {
	box-sizing: border-box;
	margin: 0;
}

:root {
	font-size: clamp(0.875rem, 0.4626rem + 1.0309vw + var(--user-font-scale), 1.125rem);
}

body {
  padding-block-start: 2rem;
  padding-block-end: 2rem;
  min-height: 100vh;
  display: grid;
  justify-items: center;
  background: #f9fafb;
  color: #0c2c43;;
}

main {
  width: clamp(26ch, 75%, 90ch);
}

h2 {
  font-size: clamp(var(--agnostic-h5), 3vw, var(--agnostic-h2));
}
.valueprop {
  font-size: clamp(var(--agnostic-h6), 2vw, var(--agnostic-h4));
}
.valueprop a {
  font-size: clamp(var(--agnostic-h5), 2.5vw, var(--agnostic-h3));
}

.frameworks {
  display: grid;
  grid-template-columns: 1fr;
  gap: var(--fluid-16);
}

@media (min-width: 610px) {
  .frameworks {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 810px) {
  .frameworks {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (prefers-color-scheme: dark) {
  body {
    background: #0c2c43;
    color: #f9fafb;
	}
}

